# tp-2025

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.devcontainer/rebuild/: devcontainer.json
.github/workflows/: rust.yaml
tp01/: Cargo.toml
tp02/: Cargo.toml
tp03/: Cargo.toml
tp04/: Cargo.toml
tp05/: Cargo.toml
tp06/: Cargo.toml
tp07/: Cargo.toml
tp08/: Cargo.toml
